--- a/survey.css
+++ b/survey.css
@@ -8,42 +8,31 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-/* textarea { 
-  margin-left: 1%;
-  margin-bottom: 4%;
-  width: 30%; */
-/* } */
-
 .title,
 .description {
   text-align: center;
 }
 
-#title {
-  margin-top: 4%;
+.title {
+  margin-top: 2rem;
 }
 
-#survey-form {
+.survey-form {
   background-color: white;
-  border-radius: 3px;
-  width: 50%;
+  border-radius: 5px;
+  max-width: 650px;
   margin: auto;
-  padding: 10px;
+  padding: 20px;
 }
 
-#submit {
-  background-color: #f2385a;
+.submit {
+  background-color: rgb(194, 179, 190);
   color: white;
   height: 40px;
-  width: 80px;
+  width: 20%;
   margin: auto;
   border-radius: 5px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0.625rem;
+  border: 2px solid rgb(194, 179, 190);
 }
 
 .form-input {
@@ -51,26 +40,15 @@ body {
   border-radius: 10px;
   padding: 10px 5px;
   border: 1px solid #ccc;
+  outline: none;
 }
 .group-form {
   display: flex;
   flex-direction: column;
   margin-bottom: 0.625rem;
 }
-.group-input {
-  margin-top: 0.625rem;
+.entry {
+  outline: white;
   border-radius: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-}
-.seyi-girl {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0.625rem;
-}
-.girl-seyi {
-  margin-top: 0.635rem;
-  border-radius: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
+  border: 2px solid white;
 }
